--- a/index.html
+++ b/index.html
@@ -23,6 +23,28 @@
             <div class="address">
                 <p>Jl. Thamrin no. 11 Tebing Tinggi</p>
             </div>
+            <div class="cta">
+                <a href="">
+                    <div class="cta-button">
+                        <div class="icon">
+                            <img src="public/asset/img/icons/ic_whatsapp.png" alt="">
+                        </div>
+                        <div class="cta-name">
+                            <p>Our Menu</p>
+                        </div>
+                    </div>
+                </a>
+                <a href="">
+                    <div class="cta-button">
+                        <div class="icon">
+                            <img src="public/asset/img/icons/menu.png" alt="">
+                        </div>
+                        <div class="cta-name">
+                            <p>Our Menu</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
             <div class="description">
                 <p>Ikuti sosial media kami:</p>
             </div>
