add menu link button

--- a/index.html
+++ b/index.html
@@ -24,20 +24,10 @@
                 <p>Jl. Thamrin no. 11 Tebing Tinggi</p>
             </div>
             <div class="cta">
-                <a href="">
+                <a href="menu.html">
                     <div class="cta-button">
                         <div class="icon">
-                            <img src="public/asset/img/icons/ic_whatsapp.png" alt="">
-                        </div>
-                        <div class="cta-name">
-                            <p>Our Menu</p>
-                        </div>
-                    </div>
-                </a>
-                <a href="">
-                    <div class="cta-button">
-                        <div class="icon">
-                            <img src="public/asset/img/icons/menu.png" alt="">
+                            <img src="public/asset/img/icons/ic_menu.svg" alt="">
                         </div>
                         <div class="cta-name">
                             <p>Our Menu</p>
