--- a/index.html
+++ b/index.html
@@ -23,23 +23,36 @@
             <div class="address">
                 <p>Jl. Thamrin no. 11 Tebing Tinggi</p>
             </div>
-            <div class="cta">
-                <a href="menu.html">
+            <div class="scrollable">
+
+                <div class="cta">
+                    <a href="menu.html">
+                        <div class="cta-button">
+                            <div class="icon">
+                                <img src="public/asset/img/icons/ic_menu.svg" alt="">
+                            </div>
+                            <div class="cta-name">
+                                <p>Our Menu</p>
+                        </div>
+                    </div>
+                </a>
+                <a href="https://www.google.com/maps/place/Cahaya+aquarium/@3.32652,99.1595195,17z/data=!3m1!4b1!4m5!3m4!1s0x303161a46e4f39d5:0x7e092d8691a55e88!8m2!3d3.32652!4d99.1595195">
                     <div class="cta-button">
                         <div class="icon">
-                            <img src="public/asset/img/icons/ic_menu.svg" alt="">
+                            <img src="public/asset/img/icons/ic_location.svg" alt="">
                         </div>
                         <div class="cta-name">
-                            <p>Our Menu</p>
+                            <p>Maps</p>
                         </div>
                     </div>
                 </a>
             </div>
+        </div>
             <div class="description">
                 <p>Ikuti sosial media kami:</p>
             </div>
         </div>
-
+        
         <div class="socmed-list">
             <a href="whatsapp://send?phone=6281370312450">
                 <div class="socmed">
