--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <p>Dapur Mozza</p>
             </div>
             <div class="address">
-                <p>Jl. Thamrin no. 11 Tebing Tinggi</p>
+                <p>Jl. Thamrin no. 11 Tebing Tinggi (depan Cahaya Aquarium)</p>
             </div>
             <div class="scrollable">
 
